--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.4",
     "seedrandom": "^3.0.5",
     "vue": "^2.6.11",
-    "vue-command": "^7.3.2"
+    "vue-command": "^7.3.2",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
